--- a/landing.html
+++ b/landing.html
@@ -23,7 +23,7 @@
 
     <div class="banner-btn">
         <p><a href="generate.html">Generate A Random Card</a></p>
-        <p><a href="custom.html">Customize My Card</a></p>
+        <!--<p><a href="custom.html">Customize My Card</a></p>-->
     </div>  
 </div>
 
